ajout de l'image final, amélioration des timing

--- a/src/index.html
+++ b/src/index.html
@@ -50,9 +50,7 @@
           </div>
         </div>
       </div>
-      <div class="final-screen">
-        <img src="img/final-screen.png" alt="Arrivée sur la page d'accueil" />
-      </div>
+
       <div class="logo"><img src="img/logo.svg" alt="InSitu" /></div>
       <div class="accessibility-button">
         <img src="img/accessibility-button.svg" alt="accessibility-button" />
@@ -136,7 +134,9 @@
         </div>
       </div>
     </div>
-
+    <div class="image-background">
+      <img src="img/final-screen.png" alt="image de fin" />
+    </div>
     <script src="js/main.js" type="module"></script>
   </body>
 </html>
