problème de hauteur résolu, timing réglé complètement, plus de bug

--- a/src/index.html
+++ b/src/index.html
@@ -69,12 +69,12 @@
         </div>
         <div class="hand-container"></div>
       </div>
-      <div class="degrade">
-        <div class="flou2"></div>
-        <div class="flou"></div>
-        <div class="flou"></div>
-        <div class="flou"></div>
-        <div class="flou"></div>
+      <div class="gradient">
+        <div class="blur2"></div>
+        <div class="blur"></div>
+        <div class="blur"></div>
+        <div class="blur"></div>
+        <div class="blur"></div>
 
         <div class="svg">
           <svg
@@ -135,7 +135,7 @@
       </div>
     </div>
     <div class="image-background">
-      <img src="img/final-screen.png" alt="image de fin" />
+      <img src="img/final-screen.png" alt="Choisissez une langue" />
     </div>
     <script src="js/main.js" type="module"></script>
   </body>
